# hairy

./: .gitignore  README.md  cabal.project  container-setup.sh  devcontainer-setup.sh
.devcontainer/: .bashrc  conf.cabal  devcontainer.json
.github/workflows/: ci.yml
00_common-lib/: common-lib.cabal
00_common-lib/src/Common/: PreludeExtras.hs
01_tutorial-basic/: tutorial-basic.cabal
01_tutorial-basic/src/: Main.hs
02_tutorial-recursion/: tutorial-recursion.cabal
02_tutorial-recursion/src/: Main.hs
02_tutorial-recursion/src/Tutorial/: Recursion.hs
analyser/reports/: coverage_20250511_220137.json
core/: README.md  core.cabal  utils.hs
core/Field/: CM31.hs  QM31.hs
core/Field/spec/: cm31.tex
core/directory/: directory.cabal
core/directory/src/: Main.hs  README.md
core/examples/: examples.cabal
core/examples/src/: README.md
core/src/Field/: CM31.hs  M31.hs  QM31.hs
core/src/Field/spec/: m31-test-spec.md  m31.tex  qm31.tex
core/test/: RunCM31Tests.hs  RunM31Tests.hs  RunQM31Tests.hs  RunUtilsTests.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.3/: common-lib-0.1.0.0-inplace.conf  package.cache  tutorial-recursion-0.1.0.0-inplace.conf
docs/core/fields/: 00-INTRO.md  01-M31.md  02-CM31.md  03-QM31.md
repo-utils/analyser/: analyse_coverage.py
repo-utils/analyser/reports/: coverage_20250511_220328.json  coverage_20250511_224245.json
workspace/repo-utils/analyser/reports/: coverage_20250511_220213.json
