-- tutorial-recursion/tutorial-recursion.cabal
cabal-version:       >=1.10
name:                tutorial-recursion
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     Tutorial.Recursion
  hs-source-dirs:      src
  build-depends:
      base >=4.14 && <5
    , common-lib  
  default-language:    Haskell2010

executable tutorial-recursion
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:
      base
    , tutorial-recursion
    , common-lib
  default-language:    Haskell2010
