-- core/core.cabal
cabal-version:       >=1.10
name:                core
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     Field.M31
                     , Field.CM31
                     , Field.QM31
  hs-source-dirs:      src
  build-depends:
      base >=4.14 && <5
    , deepseq >= 1.4
  default-language:    Haskell2010
  ghc-options:         -Wall

-- Executable 'strk-math-exe' is removed as its Main.hs will be part of the new 'directory' package.

test-suite m31-tests
  type:                exitcode-stdio-1.0
  main-is:             RunM31Tests.hs
  hs-source-dirs:      test
  build-depends:
      base >=4.14 && <5
    , core        
    , QuickCheck >=2.14
  default-language:    Haskell2010
  ghc-options:         -Wall
  cpp-options:         -DTESTING

test-suite cm31-tests
  type:                exitcode-stdio-1.0
  main-is:             RunCM31Tests.hs
  hs-source-dirs:      test
  build-depends:
      base >=4.14 && <5
    , core        
    , QuickCheck >=2.14
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite qm31-tests
  type:                exitcode-stdio-1.0
  main-is:             RunQM31Tests.hs
  hs-source-dirs:      test
  build-depends:
      base >=4.14 && <5
    , core        
    , QuickCheck >=2.14