cabal-version:       >=1.10
name:                directory
version:             0.1.0.0
build-type:          Simple

-- This refers to the library defined in core/core.cabal
executable directory-exe
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:
      base >=4.14 && <5
    , core        
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N 